// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list.py 1`] = `
a = [
    "a",
    'b'
]

a = [
    "a",
    'b',
    'c',
    'd',
    'e',
    'f',
    'g',
    'hhhhhhhhhhhhhh',
]

a = ['aaaaaaaaaaaaaaaaaaaaaaaaaaaa', 'bbbbbbbbbbbbbbbbbbbbbbbbbbbb', 'cccccccccccccccccccccccccccc', 'dddddddddddddddddddddddddddd']
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a = ["a", "b"]

a = ["a", "b", "c", "d", "e", "f", "g", "hhhhhhhhhhhhhh"]

a = [
    "aaaaaaaaaaaaaaaaaaaaaaaaaaaa",
    "bbbbbbbbbbbbbbbbbbbbbbbbbbbb",
    "cccccccccccccccccccccccccccc",
    "dddddddddddddddddddddddddddd"
]

`;

exports[`list.py 2`] = `
a = [
    "a",
    'b'
]

a = [
    "a",
    'b',
    'c',
    'd',
    'e',
    'f',
    'g',
    'hhhhhhhhhhhhhh',
]

a = ['aaaaaaaaaaaaaaaaaaaaaaaaaaaa', 'bbbbbbbbbbbbbbbbbbbbbbbbbbbb', 'cccccccccccccccccccccccccccc', 'dddddddddddddddddddddddddddd']
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a = ["a", "b"]

a = ["a", "b", "c", "d", "e", "f", "g", "hhhhhhhhhhhhhh"]

a = [
    "aaaaaaaaaaaaaaaaaaaaaaaaaaaa",
    "bbbbbbbbbbbbbbbbbbbbbbbbbbbb",
    "cccccccccccccccccccccccccccc",
    "dddddddddddddddddddddddddddd",
]

`;

exports[`list.py 3`] = `
a = [
    "a",
    'b'
]

a = [
    "a",
    'b',
    'c',
    'd',
    'e',
    'f',
    'g',
    'hhhhhhhhhhhhhh',
]

a = ['aaaaaaaaaaaaaaaaaaaaaaaaaaaa', 'bbbbbbbbbbbbbbbbbbbbbbbbbbbb', 'cccccccccccccccccccccccccccc', 'dddddddddddddddddddddddddddd']
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a = ["a", "b"]

a = ["a", "b", "c", "d", "e", "f", "g", "hhhhhhhhhhhhhh"]

a = [
    "aaaaaaaaaaaaaaaaaaaaaaaaaaaa",
    "bbbbbbbbbbbbbbbbbbbbbbbbbbbb",
    "cccccccccccccccccccccccccccc",
    "dddddddddddddddddddddddddddd"
]

`;
